--- a/admin/index.html
+++ b/admin/index.html
@@ -4,28 +4,22 @@
         <meta charset="UTF-8"/>
         <title>Index de l'administration</title>
 
-        <script src="js/jquery-2.1.3.min.js"></script>
-        <link rel="icon" href="images/icone_site/favicon.png">
+        <script src="../js/jquery-2.1.3.min.js"></script>
+        <link rel="icon" href="../images/icone_site/favicon.png">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Bootstrap -->
         <link href="../css/bootstrap.min.css" rel="stylesheet">
         <link href="../css/bootstrap-theme.css" rel="stylesheet" type="text/css"/>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
-        <!--selecteur-->
-        <link rel="stylesheet" type="text/css" href="../css/bootstrap-select.min.css">
-        <script type="text/javascript" src="js/bootstrap-select.min.js"></script>
+        <script type="text/javascript" src="../js/bootstrap.min.js"></script>
 
-        <link rel="stylesheet" type="text/css" href="css/jasny-bootstrap.min.css">
-        <script type="text/javascript" src="js/jasny-bootstrap.min.js"></script>
+        <script type="text/javascript" src="../js/fileinput.min.js"></script>
+        <link href="../css/fileinput.min.css" rel="stylesheet" type="text/css"/>
+        <script type="text/javascript" src="../js/fileinput_locale_fr.js"></script>
 
-        <!--Crop-image-->
-        <link href="crop-image/css/cropper.min.css" rel="stylesheet">
-        <link href="crop-image/css/main.css" rel="stylesheet">
-
-        <!--script info bulles-->
-        <script src='js/form_info_bulles.js'></script>
+        <link href="../css/cropper.min.css" rel="stylesheet" type="text/css"/>
+        <script type="text/javascript" src="../js/cropper.min.js"></script>
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -33,6 +27,7 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
+        <script type="text/javascript" src="../ckeditor/ckeditor.js"></script>
         <link   href="css/admin.css" rel="stylesheet" type="text/css"/><!--CSS personnaliser-->
         <!--<script src='js/func_verif_profil.js'></script>-->
     </head>
