--- a/edit_jeu.html
+++ b/edit_jeu.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8"/>
-        <title>Machiavel Fantasy - <?php if(isset($_GET['jeu'])){ ?>Modifier un jeu <?php }else{ ?>Ajouter un jeu<?php } ?></title>
+        <html>
+        <head>
+            <meta charset="UTF-8"/>
+            <title>Machiavel Fantasy - <?php if(isset($_GET['jeu'])){ ?>Modifier un jeu <?php }else{ ?>Ajouter un jeu<?php } ?></title>
 
-        <script src="js/jquery-2.1.3.min.js"></script>
-        <link rel="icon" href="images/icone_site/favicon.png">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+            <script src="js/jquery-2.1.3.min.js"></script>
+            <link rel="icon" href="images/icone_site/favicon.png">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Bootstrap -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/bootstrap-theme.min.css" rel="stylesheet" type="text/css"/>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+            <!-- Bootstrap -->
+            <link href="css/bootstrap.min.css" rel="stylesheet">
+            <link href="css/bootstrap-theme.min.css" rel="stylesheet" type="text/css"/>
+            <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
-        <script type="text/javascript" src="js/fileinput.min.js"></script>
-        <link href="css/fileinput.min.css" rel="stylesheet" type="text/css"/>
-        <script type="text/javascript" src="js/fileinput_locale_fr.js"></script>
+            <script type="text/javascript" src="js/fileinput.min.js"></script>
+            <link href="css/fileinput.min.css" rel="stylesheet" type="text/css"/>
+            <script type="text/javascript" src="js/fileinput_locale_fr.js"></script>
 
-        <link href="css/cropper.min.css" rel="stylesheet" type="text/css"/>
-        <script type="text/javascript" src="js/cropper.min.js"></script>
+            <link href="css/cropper.min.css" rel="stylesheet" type="text/css"/>
+            <script type="text/javascript" src="js/cropper.min.js"></script>
 
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
-        <script type="text/javascript" src="ckeditor/ckeditor.js"></script>
-        <link href="css/complement.css" rel="stylesheet">
-    </head>
-    <body>
+            <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+            <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+            <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+            <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+            <![endif]-->
+            <script type="text/javascript" src="ckeditor/ckeditor.js"></script>
+            <link href="css/complement.css" rel="stylesheet">
+        </head>
+        <body>
         <?php
             include_once("accessoires/header.html");
             include_once("accessoires/menu.html");
@@ -122,7 +122,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-md-4">
-                                                    <div class="preview cropper-bg" style="overflow: hidden;height: 235px;width: 176px; float: none;border: 3px solid #fff;border-radius: 5px;box-shadow: 0 0 5px rgba(0,0,0,.15);margin-left: auto;margin-right: auto;" >
+                                                    <div class="preview cropper-bg" style="overflow: hidden;height: 235px;width: 176px; float: none;border: 3px solid #fff;box-shadow: 0 0 5px rgba(0,0,0,.15);margin-left: auto;margin-right: auto;" >
                                                         <img src=""/>
                                                     </div>
                                                 </div>
@@ -145,7 +145,7 @@
 						</div>
 					</div>
 					<div class="col-md-5">
-                        <div class="preview cropper-bg" style="overflow: hidden;height: 200px;width: 150px; float: noneborder: 3px solid #fff;border-radius: 5px;box-shadow: 0 0 5px rgba(0,0,0,.15);margin-left: auto;margin-right: auto;">
+                        <div class="preview cropper-bg" style="overflow: hidden;height: 200px;width: 150px; float: noneborder: 3px solid #fff;box-shadow: 0 0 5px rgba(0,0,0,.15);margin-left: auto;margin-right: auto;">
                             <label for="inputArticleFile" style="cursor: pointer;"><img src="images/jeux/<?= $image_jeu; ?>"/></label>
                         </div>
 					</div>
