--- a/admin/main/liste_jeux/ajouter_jeux.html
+++ b/admin/main/liste_jeux/ajouter_jeux.html
@@ -50,6 +50,7 @@
                             removeIcon: '<i class="glyphicon glyphicon-trash"></i>'
                         });
                     </script>
+                    <div id="inputError" class="alert alert-danger" style="display:none"></div>
 
 
                     <!-- Button trigger modal -->
@@ -62,7 +63,7 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                    <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                                    <h4 class="modal-title" id="myModalLabel">Redimensionner l'image du jeu</h4>
                                 </div>
 
                                 <div class="modal-body">
@@ -81,15 +82,18 @@
                                             </div>
                                         </div>
                                         <div class="col-md-4">
-                                            <div id="pre_crop" class="preview cropper-bg" style="overflow: hidden;height: 235px;width: 176px; float: none;border: 3px solid #fff;box-shadow: 0 0 5px rgba(0,0,0,.15);margin-left: auto;margin-right: auto;" >
+                                            <div id="type_crop">Portrait (3:4)</div>
+                                            <div id="pre_crop" class="preview cropper-bg pre_label" style="overflow: hidden;height: 235px;width: 176px; float: none;border: 3px solid #fff;box-shadow: 0 0 5px rgba(0,0,0,.15);margin-left: auto;margin-right: auto;" >
                                                 <img src=""/>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="modal-footer">
-                                    <button class="btn btn-primary zoomin" type="button" title="Zoom +"><span class="glyphicon glyphicon-zoom-in"></span></button>
-                                    <button class="btn btn-primary zoomout" type="button" title="Zoom -"><span class="glyphicon glyphicon-zoom-out"></span></button>
+                                    <button class="btn btn-primary zoomin" type="button" title="Zoom +" style="padding-left: 4px;padding-right: 4px;padding-top: 2px;padding-bottom: 2px;"><span class="glyphicon glyphicon-zoom-in" style="font-size: 25px"></span></button>
+                                    <button class="btn btn-primary zoomout" type="button" title="Zoom -" style="padding-left: 4px;padding-right: 4px;padding-top: 2px;padding-bottom: 2px;"><span class="glyphicon glyphicon-zoom-out" style="font-size: 25px"></span></button>
+                                    <button class="btn btn-primary carre" type="button" title="Zoom -">1:1</button>
+                                    <button class="btn btn-primary rectangle" type="button" title="Zoom -">3:4</button>
                                     <script>
                                         $(".zoomin").on("click",function(){
                                             $("#crop").cropper("zoom",0.1);
@@ -97,9 +101,16 @@
                                         $(".zoomout").on("click",function(){
                                             $("#crop").cropper("zoom",-0.1);
                                         });
+                                        $(".carre").on("click",function(){
+                                            $("#crop").cropper("setAspectRatio",1);
+                                            $("#type_crop").empty().text("Carrée (1:1)");
+                                        });
+                                        $(".rectangle").on("click",function(){
+                                            $("#crop").cropper("setAspectRatio",3/4);
+                                            $("#type_crop").empty().text("Portrait (3:4)");
+                                        });
                                     </script>
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                    <button type="button" class="btn btn-success" data-dismiss="modal">Ok</button>
                                 </div>
                             </div>
                         </div>
@@ -115,7 +126,7 @@
             </div>
             <div class="col-md-5">
                 <div id="pre_form" class="preview cropper-bg" style="overflow: hidden;height: 200px;width: 150px; float: noneborder: 3px solid #fff;box-shadow: 0 0 5px rgba(0,0,0,.15);margin-left: auto;margin-right: auto;">
-                    <label for="inputArticleFile" style="cursor: pointer;"><img src="../images/jeux/<?= $image_jeu; ?>"/></label>
+                    <img src="../images/jeux/<?= $image_jeu; ?>"/>
                 </div>
             </div>
         </div>
@@ -176,12 +187,10 @@
             </p>
         </div>
     </form>
+    <span id="mime1"></span>
 </div>
 
 <!--read url pour l'image-->
 <script type="text/javascript" src="../js/readURL.js"></script>
 <!-- compteur -->
 <script type="text/javascript" src="../js/compteur.js"></script>
-<script>
-
-</script>
