Modification du style de toute les pages Ajout du système d'inscription et de désinscription à un événement.

--- a/activation.html
+++ b/activation.html
@@ -28,7 +28,10 @@
                 include_once("accessoires/menu.html");//barre de menu
             ?>
         <div class="col-md-10 col-lg-offset-1 contenu">
-			<h3 class="underline">Activation de votre compte</h3>
+			<h3 class="title_page" style="background-color: #c9cacb">
+                <img src="images/icone_site/cadenas.png" height="75" width="75"></img>
+                <span>Activation de votre compte</span>
+            </h3>
 			<?php
 				if(!empty($errors[1]))//si vide
 				{
