--- a/club.html
+++ b/club.html
@@ -30,10 +30,11 @@
 			include_once("accessoires/menu.html");//barre de menu
 		?>
 		<div class="col-md-10 col-lg-offset-1 contenu">
+            <h3 class="title_page" style="background-color: rgba(195, 97, 76, 0.89);">
+                <span style="margin-left:15px;">Le club</span>
+                <img src="images/icone_site/le_club.png" height="75"></img>
+            </h3>
             <div class="col-md-10 main">
-                <h3 class="media-heading underline">
-                    Le Club
-                </h3>
                 text club
             </div>
             <div class="col-md-2" style="padding-right:0;">
