--- a/connexion.html
+++ b/connexion.html
@@ -42,7 +42,7 @@
 			include_once("accessoires/menu.html");//barre de menu
 		?>
         <div class="contenu col-md-10 col-lg-offset-1">
-                <div class="col-sm-6 col-md-6 espace_connexion">
+                <div class="col-sm-6 col-md-6 connexion_left">
                     <div class="thumbnail membre">
                         <div>
                             <h3 class="underline">S'identifier</h3>
@@ -74,7 +74,7 @@
                         <?php 	} ?>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-6 espace_connexion" style="padding-right:0;">
+                <div class="col-sm-6 col-md-6 connexion_right">
                     <div class="thumbnail membre">
                         <div>
                             <h3 class="underline">S'inscrire</h3>
