--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,12 @@
 			include_once("accessoires/menu.html");//barre de menu
 		?>
 		<div class="col-md-10 col-lg-offset-1 contenu">
+            <h3 class="title_page" style="background-color: rgba(62, 49, 150, 0.23);">
+                <img src="images/icone_site/plume.png" height="75" width="75"></img>
+                <span>Contact</span>
+            </h3>
             <div class="col-md-10 main">
-                <h3 class="underline">Contact</h3>
+                Contact
             </div>
             <div class="col-md-2" style="padding-right:0;">
                 <?php include_once("accessoires/calendrier_aside.php");
