--- a/inscription.html
+++ b/inscription.html
@@ -49,8 +49,11 @@
 			include_once("accessoires/menu.html");//barre de menu
 		?>
         <div class="col-md-10 col-lg-offset-1 contenu">
+            <h1 class="title_page" style="background-color: #046BAD ">
+                <img src="images/icone_site/inscription.png" height="75" width="75"></img>
+                <span>Inscription</span>
+            </h1>
 			<div class="col-md-offset-3 col-md-6">
-				<h1 class="underline">Inscription</h1>
 				<?php if(!isset($success)) { ?>
 				<!--Formulaire d'inscription-->
 				<form action="inscription.php" method="POST" role="form">
