ajout de la possibilté de choisir la couleur de fond d'une image pour jeu

--- a/admin/index.html
+++ b/admin/index.html
@@ -21,6 +21,8 @@
         <link href="../css/cropper.min.css" rel="stylesheet" type="text/css"/>
         <script type="text/javascript" src="../js/cropper.min.js"></script>
 
+        <link rel="stylesheet" href="../css/pick-a-color-1.2.3.min.css">
+
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -136,5 +138,7 @@
                 </div>
             </div>
         </div>
+        <script src="../js/tinycolor-0.9.15.min.js"></script>
+        <script src="../js/pick-a-color-1.2.3.min.js"></script>
     </body>
 </html>
